# HW23_2_project

./: .env.sample  catalog.json  groups.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py
blog/templates/blog/: blog_base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fastload.py
catalog/migrations/: 0001_initial.py  0002_alter_product_manufactured_at.py  0002_product_manufactured_at.py  0003_alter_product_manufactured_at.py  0004_alter_product_manufactured_at_and_more.py  0005_alter_version_options.py  0006_alter_product_manufactured_at_and_more.py  0007_alter_product_manufactured_at.py  0008_product_owner_alter_product_manufactured_at.py  0009_alter_product_manufactured_at.py  0010_product_is_published_alter_product_manufactured_at.py  0011_alter_product_options.py  0012_alter_product_manufactured_at.py
catalog/templates/catalog/: category_list.html  contacts.html  home.html  product_basis_form.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  product_view.html
catalog/templates/catalog/includes/: inc_header.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  password_update.html  register.html  user_form.html  users_base.html
