[tool.poetry]
name = "hw19-2-1-project"
version = "0.1.0"
description = ""
authors = ["rinatyuk-git <17_ufo_RB@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
